--- a/index.html
+++ b/index.html
@@ -54,7 +54,25 @@
             </div>
         </div>
     </div>
+       <div id="certificates">
+            <h1>Certificates And Projects</h1><br>
+            <p>I am a Microsoft office specialist and a certified Cloud Systems analyst.
+            I look forward to accumulating a lot more certificates in the near future. </p>
+            <br>    
+            <div class="cert-main-grid">
+            <div class="cert-grid1">
+                <img alt ="cert-pic" src="img/MOS.png">
+            </div>
 
+            <div class="cert-grid2">
+                <img alt ="cert-pic" src="img/CSA.png">
+
+            </div>
+            <div class="project-grid3">
+                <img alt ="cert-pic" src="img/SPEAK OUT (EDITED).png">
+            </div>
+        </div>
+    </div>
        
             <footer>
             <div class="footer">
