Add a contact form

--- a/index.html
+++ b/index.html
@@ -73,7 +73,33 @@
             </div>
         </div>
     </div>
-       
+    <div id="contact">
+        <form class="porfolio-form">
+            <h1>Contact</h1>
+            <h2>Send me a message.</h2>
+            <div class="form-row">
+                <label class="form-label">Name</label>
+                <div class="form-input">
+                    <input id="mailSubject" class="form-input-text" type="text">
+                </div>
+            </div>
+            <div class="form-row">
+                <label class="form-label">Subject</label>
+                <div class="form-input">
+                    <input id="mailSubject" class="form-input-text" type="text">
+                </div>
+            </div>
+            <div class="form-row">
+                <label class="form-label">message:</label>
+                <div class="form-input">
+                    <textarea id="mailMessage" class="form-input-textarea" type = "text"></textarea>
+                </div>
+            </div>
+            <div class="form-submit">
+                <a onmouseover="appendMailTo()" id="sendMail" href="mailto:uwibambe_adeline@yahoo.com" class="btn-submit">Submit</a>
+            </div>
+        </form>
+    </div>
             <footer>
             <div class="footer">
                 Copyright &copy; <span id="getYear"></span>
